video to iframe

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <video id="cameraFeed" autoplay></video>
+        <iframe src="https://taliscam-access-site.netlify.app/" width="640" height="480"></iframe>
     </div>
 </body>
 </html>
